# Tareas_Data_Structures

./: CMakeLists.txt  README.md  Tarea_tipo_guardados.cpp  empleado.cpp  fecha.cpp  fraccion.cpp  fraccion.h  main.cpp  mainPunto.cpp  punto.h  recta.cpp  recta.h  rectangulo.cpp  rectangulo.h  tiempo.cpp  tiempo.h  vector3d.cpp  vector3d.h
EIGHTH HOMEWORK/: PackagesWithVectors.h  main8thHomework.cpp
FIFTH HOMEWORK/: Archivo_students.h  enunciado_estudiantes  main_homeworkFifth.cpp
FIRST HOMEWORK/: Tarea_argc_argv.cpp  datos.txt
FIRST QUIZ/: FirstQuiz.cpp
FOURTH HOMEWORK/: Archivo.cpp  Archivo.h  enunciado  main4thHomework.cpp
IMPORTANT NOTES/: Notas.txt  important_structure_for_Quiz.cpp
NINTH HOMEWORK/: TorreHanoi.h  mainWithFltk.cpp
SECOND HOMEWORK/: Circulo.cpp  Circulo.h  empleado.h  fecha.h  mainPunto.cpp  punto.cpp
SEVENTH HOMEWORK/: Enunciado_Seventh_Homework.txt  main_Enunciado_Seventh.cpp  paquetes.h
SIXTH HOMEWORK/: Arreglo_int.h  enunciado_2025_08_12.txt  main_15_08_2025.cpp
STACK NOTES/: Lista_paquetes.h  PILA.h  Stack_main.cpp
TENTH HOMEWORK/: ColaCircular_main.cpp  EnunciadoHomework.txt
THIRD HOMEWORK/: Algoritms_and_symptotic_notation.cpp
