cmake_minimum_required(VERSION 3.31)
project(TareasDatos)

set(CMAKE_CXX_STANDARD 20)

add_executable(TareasDatos
        punto.cpp
        punto.h
        mainPunto.cpp
        rectangulo.cpp
        rectangulo.h
        Circulo.cpp
        Circulo.h
        fecha.cpp
        fecha.h
        tiempo.cpp
        tiempo.h
        fraccion.cpp
        fraccion.h
        vector3d.cpp
        vector3d.h
        recta.cpp
        recta.h
        empleado.cpp
        empleado.h)
