cmake_minimum_required(VERSION 3.20)
project(TareasDatos)

set(CMAKE_CXX_STANDARD 20)

add_executable(TareasDatos
        "SECOND HOMEWORK/punto.cpp"
        "SECOND HOMEWORK/punto.h"
        "SECOND HOMEWORK/rectangulo.cpp"
        "SECOND HOMEWORK/rectangulo.h"
        "SECOND HOMEWORK/Circulo.cpp"
        "SECOND HOMEWORK/Circulo.h"
        "SECOND HOMEWORK/fecha.cpp"
        "SECOND HOMEWORK/fecha.h"
        "SECOND HOMEWORK/tiempo.cpp"
        "SECOND HOMEWORK/tiempo.h"
        "SECOND HOMEWORK/fraccion.cpp"
        "SECOND HOMEWORK/fraccion.h"
        "SECOND HOMEWORK/vector3d.cpp"
        "SECOND HOMEWORK/vector3d.h"
        "SECOND HOMEWORK/recta.cpp"
        "SECOND HOMEWORK/recta.h"
        "SECOND HOMEWORK/empleado.cpp"
        "SECOND HOMEWORK/empleado.h"
        #"THIRD HOMEWORK/Algoritms_and_symptotic_notation.cpp"
        "FOURTH HOMEWORK/Archivo.cpp"
        "FOURTH HOMEWORK/Archivo.h"
        #"FOURTH HOMEWORK/main4thHomework.cpp"
        "SIXTH HOMEWORK/Arreglo_int.h"
        #"SIXTH HOMEWORK/main_15_08_2025.cpp"
        "SEVENTH HOMEWORK/paquetes.h"
        #"SEVENTH HOMEWORK/main_Enunciado_Seventh.cpp"
        "FIFTH HOMEWORK/Archivo_students.h"
        "FIFTH HOMEWORK/main_homeworkFifth.cpp"
)
